--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-router": "7.12.0"
+    "react-icons": "^5.5.0",
+    "react-router": "7.12.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/vite": "^4.2.0",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.13",
+    "@types/react-router-dom": "^5.3.3",
+    "tailwindcss": "^4.2.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
